# NovaDCC

./: .gitignore  CMakeLists.txt  CMakePresets.json  Doxyfile  RoadMap.txt  imgui.ini  text.txt
src/: animator.cpp  animator.h  asset_loader.cpp  asset_loader.h  assets_window.cpp  assets_window.h  bottom_window.cpp  bottom_window.h  camera.cpp  camera.h  gizmo.cpp  gizmo.h  gizmo_controller.cpp  gizmo_controller.h  gizmo_draw.cpp  gizmo_lib.cpp  gizmo_lib.h  gui_console.cpp  gui_console.h  log.cpp  log.h  main.cpp  mesh.h  primitive_factory.cpp  primitive_factory.h  renderer.cpp  renderer.h  scene.cpp  scene.h  tools_window.cpp  tools_window.h  ui_helpers.cpp  ui_helpers.h  viewport_window.cpp  viewport_window.h
